--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,13 @@ footer {
 
 /* Mobile responsive styles */
 @media (max-width: 750px) {
+  .centerimage {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
+
   nav ul.nav-links {
     display: none;
     flex-direction: column;
